style.css
/* General formatting */
body {
	padding: 0 10px;
	font: 18px/1.5 -apple-system, BlinkMacSystemFont, "avenir next",avenir, "Segoe UI", "lucida grande", "helvetica neue", helvetica, "Fira Sans",roboto, noto, "Droid Sans", cantarell, oxygen, ubuntu, "franklin gothic medium", "century gothic", "Liberation Sans",
	sans-serif;
	background: linear-gradient(135deg, #f3f8fd, #c8ddfb 55%, #e0cfe8);

	min-height: 100vh;
	max-width: 100%;
	scroll-behavior: smooth;
	overflow: auto;
}

#site-wrapper {
    overflow-x: hidden;
    overflow-y: scroll;
}

h1, h2, h3 {
	line-height: 1.2;
	padding: 10px;
}

nav {
	display: flex;
	position: fixed;
	top: 0;
	z-index: 1;
	margin-left:500px;
	

  }

nav ul{
	display: flex;
	flex-direction: row;
	align-items: space-between;
	list-style-type: none;
	gap: 5px;
}

nav li{
	border-radius: 2px;
	border-radius: 5px;
	margin: 0 3px;
	text-align: center;
}

nav a{
	text-decoration: none;
	color: whitesmoke;
	background-color: rgba(151, 151, 212, 0.9); 
	border-radius: 5px; 
	padding: 5px 6px;
}

img {
	max-width: 50%;
	border-radius: 10px;
}

#task-table {
	border: rgb(109, 46, 109) solid 2px;
}
.section-cards{
	background-color: rgba(255, 255, 255, 0.7);
	border: 1px solid #ddd;
	border-radius: 10px;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
	margin-top: 30px;
	padding: 0px 20px 20px 20px;
	width: 1013px;
	display:block;

}
video {
	border-radius: 10px;
}
/* Your text should be in a nice narrow column */
.content-column {
	max-width: 1050px;
	margin: 0px auto;
}

#calendar-selection{
	color:rgb(109, 46, 109);

}
.input-menus {
	display: flex;
	max-width: 1300px;
	justify-content: space-evenly;
	gap:20px;
}

#filterMenu {
	width:100%;
	text-align: center;
}
#legend {
	max-width: 400px;
	text-align: center;
	margin-right: 80px;
}


/* But your visualization should be full-width and full-height */
.vis-holder {
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
}

#main-interactions {
	display: flex;
	gap: 50px;
	margin-top: 50px;
	max-width: 1300px;
}

#vis-svg {
	width: 600px;
	height: 600px; /* Set height explicitly */
	border: rgb(109, 46, 109) solid 2px;
	border-radius: 10px;
  }

#vis-svg svg {
	background-color: #f9f9f9; 
	border: 1px solid #ccc;
}

#mbta-map {
	border: rgb(109, 46, 109) solid 2px;
	border-radius: 10px;
	width: 600px;
	height: 600px;
}


.sketches {
	display:flex;
	flex-direction: row;
	flex-wrap: wrap;
	border: rgb(109, 46, 109) solid 2px;
	border-radius: 10px;
}


/* Fork on GitHub ribbon via https://codepo8.github.io/css-fork-on-github-ribbon/# */  
#forkongithub a{
	background:rgba(151, 151, 212); 
	color:#fff;
	text-decoration:none;
	font-family:arial,sans-serif;
	text-align:center;
	font-weight:bold;
	padding:5px 40px;
	font-size:1rem;
	line-height:1.4rem;
	position:relative;
	transition:0.5s;
}
#forkongithub a:hover{
	background:rgb(207, 71, 170);
	color:#fff;
}
#forkongithub a::before,#forkongithub a::after{
	content:"";
	width:100%;
	display:block;
	position:absolute;
	top:1px;
	left:0;
	height:1px;
	background:#fff;
}
c a::after{
	bottom:1px;
	top:auto;
}
@media screen and (min-width:1000px){
	#forkongithub{
		position:fixed;
		display:block;
		top:0;
		left:0;
		width:200px;
		overflow:hidden;
		height:200px;
		z-index:9999;
	}
	#forkongithub a{
		width:200px;
		position:absolute;
		top:60px;
		left:-60px;
		transform:rotate(-45deg);
		-webkit-transform:rotate(-45deg);
		-ms-transform:rotate(-45deg);
		-moz-transform:rotate(-45deg);
		-o-transform:rotate(-45deg);
		box-shadow:4px 4px 10px rgba(0,0,0,0.8);
	}
}

/* calendar styles */
#calendar {
    background-color: white;
    border: 1px solid #e0e0e0;
    border-radius: 8px;
    padding: 20px;
    max-width: 800px;
    margin: 0 auto;
	width: 90%;
}

.calendar-year-heading {
    color: rgb(109, 46, 109);
    margin-bottom: 10px;
	font-size: 22px;
}

.month-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr); 
    grid-gap: 8px;
}

@media (max-width: 768px) {
    .month-grid {
        grid-template-columns: repeat(2, 1fr);
    }

	nav{
		display:none;
	}
}

.month-cell {
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 5px;
    padding: 8px;
    text-align: center;
    transition: background-color 0.3s ease, transform 0.2s ease;
	font-size: 17px;
}

.month-cell:hover {
    background-color: rgb(237, 214, 237) !important;
    transform: scale(1.05);
}

.year-selection-sidebar .year-cell {
    padding: 6px; 
    font-size: 14px; 
    transition: background-color 0.3s ease, transform 0.2s ease;
    border-radius: 5px;
}

.year-selection-sidebar .year-cell:hover {
    background-color: rgb(237, 214, 237) !important;
    transform: scale(1.05);
}

/* Calendar Reset button styling */
#reset-button {
    font-size: 14px;
    transition: background-color 0.3s ease;
}

#reset-button:hover {
    background-color: rgb(207, 71, 170);
}

/* lines filter styles */
#filterMenu {
    display: flex;
    justify-content: center;
}

.filter-wrapper {
    display: flex;
    flex-direction: column;
    background-color: white;
    border: 1px solid #e0e0e0;
    border-radius: 8px;
    padding: 15px;
    max-width: 300px;
    margin: 0 auto;
}

.filter-heading {
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 15px;
    color: rgb(109, 46, 109);
}

.line-grid {
    display: grid;
    grid-template-columns: repeat(1, 3fr);
    grid-gap: 10px;
}

.line-cell {
    border: 1px solid #ccc;
	font-size: 17px;
    border-radius: 8px;
    padding: 10px;
    text-align: center;
    cursor: pointer;
    background-color: #fff;
    color: #000;
    transition: background-color 0.3s, color 0.3s, transform 0.2s ease;
}
.line-cell:hover{
	transform: scale(1.05);
}

/* Line colors */
.line-cell.red-line {
    background-color: #fff;
}
.line-cell.red-line:hover{
	background-color: #ff493c;
	color: white;
}
.line-cell.red-line.selected {
    background-color: #DA291C;
    color: #fff;
}

.line-cell.blue-line {
    background-color: #fff;
}
.line-cell.blue-line:hover{
	background-color: #0054e3;
	color: #fff;
}
.line-cell.blue-line.selected {
    background-color: #003DA5;
    color: #fff;
}

.line-cell.green-line {
    background-color: #fff;
}
.line-cell.green-line:hover{
	background-color: #00a44d;
	color: white;
}
.line-cell.green-line.selected {
    background-color: #00843D;
    color: #fff;
}

.line-cell.orange-line {
    background-color: #fff;
}
.line-cell.orange-line:hover{
	background-color: #ffb349;
	color: white;
}
.line-cell.orange-line.selected {
    background-color: #ED8B00;
    color: white;
}

.line-cell.selected, .line-cell.all-lines {
    background-color: rgb(109, 46, 109);
    color: #fff;
}

.filter-reset-button {
    background-color: rgb(109, 46, 109);
    color: #fff;
    padding: 5px 10px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 12px;
    text-align: center;
    margin-top: 10px;
    transition: background-color 0.2s;
}

.filter-reset-button:hover {
    background-color: rgb(139, 76, 139);
}

/**scatterplot styles*/
circle.selected {
	fill: pink;
	stroke: red;
  }

  circle.filtered {
	opacity: 5;
  }

  circle.unfiltered {
	opacity: 0;
  }

